--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-inlinesvg": "^4.1.3"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
