--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-inlinesvg": "^4.1.3"
+    "react-inlinesvg": "^4.1.3",
+    "swiper": "^10.0.0"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
