migration from alicia is good. now we need the create page for each node

--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
